Fixed up styling for links in footer (the default color was not very legible).

--- a/static/css/local.css
+++ b/static/css/local.css
@@ -19,3 +19,14 @@
   margin-left: -0.36em;
   margin-right: -0.15em;
 }
+
+.footer a:link,
+.footer a:visited {
+  color: yellow;
+}
+
+.footer a:hover,
+.footer a:active {
+  color: #adff2f;
+  text-decoration: underline dotted;
+}
